# OpenBook

./: .gitignore  CMakeLists.txt  ProjectStructure.txt  README.md  generalSettings.cmake  labelife目录结构.drawio  qmsetup.cmake
OpenBook/: CMakeLists.txt  main.cpp
OpenBook/view/mainview/: MainWindow.qml
bookEditer/: CMakeLists.txt
bookEditer/app/: CMakeLists.txt  main.cpp
bookEditer/app/appConfig/: editorengine.cpp  editorengine.h  editorengine_p.h
bookEditer/config/: CMakeLists.txt  config.h.in
bookEditer/core/: CMakeLists.txt
bookEditer/src/: main.cpp
bookEditer/view/: CMakeLists.txt
cmake/: deploy.bat.in  deploy.sh.in
cmake/pkg_common_resource/: Config.readme
cmake/pkg_common_resource/Config/AimoDetails/: PrinterDetails
cmake/pkg_common_resource/Config/AimoDetails/en-US/PaperDetailsDir/PM-241-BT/: PaperGroupDetails
cmake/pkg_common_resource/Config/AimoDetails/en-US/PaperDetailsDir/PM-241-BT/12/: PaperDetails_12
cmake/pkg_common_resource/Config/AimoDetails/en-US/PaperDetailsDir/PM-241-BT/14/: PaperDetails_14
cmake/pkg_common_resource/Config/AimoDetails/en-US/PaperDetailsDir/PM-241-BT/19/: PaperDetails_19
cmake/pkg_common_resource/Config/AimoDetails/en-US/PaperDetailsDir/PM-241-BT/2/: PaperDetails_2
cmake/pkg_common_resource/Config/AimoDetails/en-US/PaperDetailsDir/PM-241-BT/3/: PaperDetails_3
cmake/pkg_common_resource/Config/AimoDetails/en-US/PaperDetailsDir/PM-241-BT/4/: PaperDetails_4
cmake/pkg_common_resource/Config/AimoDetails/en-US/PaperDetailsDir/PM-241-BT/40/: PaperDetails_40
cmake/pkg_common_resource/Config/AimoDetails/en-US/PaperDetailsDir/PM-241-BT/42/: PaperDetails_42
cmake/pkg_common_resource/Config/AimoDetails/en-US/PaperDetailsDir/PM-241-BT/5/: PaperDetails_5
cmake/pkg_common_resource/Config/AimoDetails/en-US/PaperDetailsDir/PM-241-BT/7/: PaperDetails_7
cmake/pkg_common_resource/Config/AimoDetails/en-US/PaperDetailsDir/PM-241-BT/8/: PaperDetails_8
cmake/pkg_common_resource/Config/AimoDetails/en-US/TemplateDetailsDir/PM-241-BT/: TemplateDetails_16  TemplateDetails_2  TemplateDetails_33  TemplateDetails_4  TemplateDetails_41  TemplateDetails_59  TemplateDetails_60  TemplateGroupDetails
cmake/pkg_common_resource/Config/AimoDetails/en-US/TemplateDetailsDir/PM-241-BT/16/: 1024_952fb568d9f30827c24afe67faf57208.json  1024_ac178c612008f3a093b490eec26eecdc.aml  1027_b015fbad86c45c72d454c93e3c464782.aml  1027_bc523129b9288a3587ab22e4507b7199.json  1040_42de7680478c437b5c57b04c2ac794e7.json  1040_50a16ec3636d30167bdb8c2fbc00bb1b.aml  1054_229388194356ad52ba921fc3b07faa99.json  1054_f998975ec8b85fbeeaf71f100ae50fa4.aml  1062_7231bd6f89b37008f66e4c8c443374da.json  1062_bfa4b7d7c20b2d697831ca0971587a6b.aml  1219_8aafe7f0dd69da2dda28cc865534e1c3.aml  1219_e969f5d587c61846db178d8f1c211e70.json  1336_8e0b7af88fc9ef3fb1da8eaa86aca5b0.json  1336_f6ec1fac7bdd656f274176b5256a9d71.aml  1460_2a512a0b09b12c10cd31303a1701064a.aml  1460_2da8d0e266181d5317ea556557af6703.json  1478_1c8eee098818e99b1d252963f3ca7ebf.json  1478_df3fc5a6b1c4689bec199e354505f9c3.aml  1537_007a2ca228e1448ce3e18a46b31d9619.aml  1537_02973b005af2e36d9de99ea7e20a58ca.json  1593_3471cbbb0f90f6171267582379ff3715.json  1593_fe1ea932d1ad2f7ec4ac6e817f484461.aml  1605_5adcab3b9f336210f0b9e6bb9e907796.aml  1605_dd5c0e571cae412b168d2a4bb776bb2f.json  1633_261ea27eab750ec16aafdf523aa6f80d.aml  1633_4933c76802983dbd0eed65d106206ae4.json  1653_56326ae1228f2e3982990933ba31f1ca.json  1653_e6a3898997b57c19d5ac0f641dc08a5e.aml  1668_7412048f14dcf3731c0593b91eb6b862.json  1668_87836fcdc770575ed9c5a357136b2362.aml  1697_e7f2692f4c50281c269e4004e82750e6.aml  1697_f2f785ea843b5ef478df03f621f7bd8a.json  1698_78617a7acf5a688a2c0e87da5bdb85ee.aml  1698_c695edb9b17548db7f2a9fda6f4f7f58.json  1746_2e13af74c3548d95d244941fe2a89d5d.json  1746_c76714dbd9ed54654ef628d0aa6ffb17.aml  1749_0b07e6c01c9a6be116e91886cf82c7b3.aml  1749_7a3d31b2d4d71076b4202c99ec8df3bf.json  1766_49f6c1ed44dccad91d7be48e345ad26c.json  1766_ee4d14af39e7a49f52b62f9cc7b85e36.aml  (+40 more)
cmake/pkg_common_resource/Config/AimoDetails/en-US/TemplateDetailsDir/PM-241-BT/2/: 1084_0c75972bfa2823be71657179a86f3f62.json  1084_2a8000c39fa067a845b71229ee6fd14c.aml  1147_0ce58fdd5f63d8065fc086cb3e439585.json  1159_8320ed54328b00cd2fff3f18dc31055d.json  1172_4e2598a2ed2458beef59805f8cb2ca66.json  1174_7c72376afa1a5a26ea8db7fa05731891.json  1209_a4c3dcc05195d5eae0f8ad48bf8e679d.json  1212_ae85fd1e9e17e520998dcde3a71e4853.json  1262_259744621a21c06eae92b139b683cab1.json  1316_09a9b5e166f2ac6b27063357ba91f284.json  1325_bc30b3dcb5d1016bb52e8a335558b689.json  1329_1595a516a26cd9913db2394df25dd4a4.json  1331_67775d0356e6bdec69e94126b59aeea9.json  1371_96d2441c7f8dfe6e6536e9249b0ddd30.json  1415_6acc2247523f536a6c0e455671ac8ff6.json  1415_8f0f462ff64a9827d24f3b6d092e9db0.aml  1423_1f204db5e09611d2d40a65588621aa59.json  1427_42a8e361ddc02553e21ff9ed394fca35.aml  1427_5abbee913c3f41620f8ce425dcbc5c85.json  1450_bfa21833deeed7cc576520498b9c6168.json  1466_446217a52cd9f47b15405f9c28c5bffd.json  1467_dcebe53f4668bde7de8c09f30629a7ee.json  1470_f872652bd9f769f88bae979bf0c70816.json  1472_fd3513bbc3070910da4145fb1211e510.json  1483_3f54faaec7d404c147df89ce2d6a87b2.json  1535_df94dfcb4604232cd878d614cbd4b0f0.json  1545_0380136f41349783624d514bd47b7eba.aml  1545_ba249504e40274bd7831f30d4b884957.json  1577_bf3851da2d262b29829f2ca750c0f243.json  1589_29500129deb3516b3397da98b6719eb5.aml  1589_f37eb8deb19872098601733b315d5b92.json  1602_5ffe5cf8e2913326d319455da5989055.json  1603_03b2ad74c4646a2191a6073257fbc0c4.json  (+72 more)
cmake/pkg_common_resource/Config/AimoDetails/zh-CN/PaperDetailsDir/PM-241-BT/: PaperGroupDetails
cmake/pkg_common_resource/Config/AimoDetails/zh-CN/TemplateDetailsDir/PM-241-BT/: TemplateDetails_2  TemplateDetails_34  TemplateDetails_36  TemplateDetails_37  TemplateDetails_43  TemplateDetails_44  TemplateDetails_45  TemplateDetails_5  TemplateDetails_57  TemplateDetails_6  TemplateDetails_7  TemplateGroupDetails
mac_resources/: MacOSXBundleInfo.plist.in  dmg_settings.json  install.sh  volume_icon.icns  打包签名.7z
(+348 files in other folders)
